--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
-Django
-MySQL-python
-PIL
-Pygments
-South
-Werkzeug
-django-compressor
-django-debug-toolbar
-django-extensions
-gunicorn
-wsgiref
-pylibmc
+Django==1.5.1
+PIL==1.1.7
+Pygments==1.6
+South==0.8.1
+Werkzeug==0.9.1
+argparse==1.2.1
+distribute==0.6.45
+django-appconf==0.6
+django-compressor==1.3
+django-debug-toolbar==0.9.4
+django-extensions==1.1.1
+gunicorn==0.17.4
+psycopg2==2.5.1
+pylibmc==1.2.3
+six==1.3.0
+trueskill==0.4.1
+wsgiref==0.1.2
