--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ South==0.8.1
 Werkzeug==0.9.1
 argparse==1.2.1
 distribute==0.6.45
+dj-database-url==0.2.1
 django-appconf==0.6
 django-compressor==1.3
 django-debug-toolbar==0.9.4
