Ready for production?

--- a/deploy/supervisor/prod.conf
+++ b/deploy/supervisor/prod.conf
@@ -1,4 +1,4 @@
-[program:<production-url>]
+[program:pong.bbox.ly]
 directory=/var/www/%(program_name)s/app
 command=/var/www/%(program_name)s/env/bin/gunicorn -c deploy/gunicorn/prod.py source.wsgi:application
 user=www-data
