--- a/deploy/nginx/prod.conf
+++ b/deploy/nginx/prod.conf
@@ -1,21 +1,21 @@
-# Replace <project-url> with the domain name
+# Replace pong.bbox.ly with the domain name
 server {
   listen 80 default_server deferred;
-  server_name www.<project-url>;
-  return 301 http://<project-url>$request_uri;
+  server_name www.pong.bbox.ly;
+  return 301 http://pong.bbox.ly$request_uri;
 }
 
 server {
   listen 80;
-  server_name <project-url>;
+  server_name pong.bbox.ly;
 
   charset utf-8;
 
   # Logs
   access_log off;
-  error_log /var/www/<project-url>/log/nginx.error.log;
+  error_log /var/www/pong.bbox.ly/log/nginx.error.log;
 
-  root /var/www/<project-url>/public/;
+  root /var/www/pong.bbox.ly/public/;
 
 
   # Static files
@@ -24,7 +24,7 @@ server {
     expires 1M;
   }
   location ~ ^/(robots\.txt|humans\.txt|favicon\.ico|apple-touch-icon\.png).*$ {
-    alias /var/www/<project-url>/public/static/$1;
+    alias /var/www/pong.bbox.ly/public/static/$1;
     add_header Cache-Control "public";
     expires 1w;
   }
@@ -34,13 +34,13 @@ server {
     include /etc/nginx/proxy_params;
 
     # Record django requests
-    access_log /var/www/<project-url>/log/nginx.access.log;
+    access_log /var/www/pong.bbox.ly/log/nginx.access.log;
 
     # Trigger Chrome-Frame in Internet Explorer
     add_header "X-UA-Compatible" "IE=Edge,chrome=1";
 
     # No caching for dynamic resources
     expires -1;
-    proxy_pass http://127.0.0.1:8000;
+    proxy_pass http://127.0.0.1:8100;
   }
 }
