--- a/deploy/nginx/prod.conf
+++ b/deploy/nginx/prod.conf
@@ -1,15 +1,12 @@
-# Replace pong.bbox.ly with the domain name
-server {
-  listen 80 default_server deferred;
-  server_name www.pong.bbox.ly;
-  return 301 http://pong.bbox.ly$request_uri;
-}
-
 server {
   listen 80;
   server_name pong.bbox.ly;
 
   charset utf-8;
+
+  # Limit to local access
+  allow 10.100.200.0/24;
+  deny all;
 
   # Logs
   access_log off;
@@ -23,7 +20,7 @@ server {
     add_header Cache-Control "public";
     expires 1M;
   }
-  location ~ ^/(robots\.txt|humans\.txt|favicon\.ico|apple-touch-icon\.png).*$ {
+  location ~ ^/(robots\.txt|humans\.txt|favicon\.ico).*$ {
     alias /var/www/pong.bbox.ly/public/static/$1;
     add_header Cache-Control "public";
     expires 1w;
