--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-appconf==0.6
 django-compressor==1.3
 django-debug-toolbar==0.9.4
 django-extensions==1.1.1
+django-suit==0.2.2
 gunicorn==0.17.4
 psycopg2==2.5.1
 pylibmc==1.2.3
