--- a/deploy/supervisor/prod.conf
+++ b/deploy/supervisor/prod.conf
@@ -1,8 +1,8 @@
 [program:pong.bbox.ly]
 directory=/var/www/%(program_name)s/app
 command=/var/www/%(program_name)s/env/bin/gunicorn -c deploy/gunicorn/prod.py source.wsgi:application
-user=www-data
-group=www-data
+user=djablons
+group=djablons
 autostart=True
 autorestart=True
 redirect_stderr=True
