Fixed nginx include

--- a/deploy/nginx/prod.conf
+++ b/deploy/nginx/prod.conf
@@ -28,7 +28,7 @@ server {
 
   # Serve Django
   location / {
-    include /etc/nginx/proxy_params;
+    include /opt/nginx/conf/proxy.conf;
 
     # Record django requests
     access_log /var/www/pong.bbox.ly/log/nginx.access.log;
