--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Django==1.5.1
+Fabric==1.6.1
 PIL==1.1.7
 Pygments==1.6
 South==0.8.1
@@ -12,7 +13,9 @@ django-debug-toolbar==0.9.4
 django-extensions==1.1.1
 django-suit==0.2.2
 gunicorn==0.17.4
+paramiko==1.10.1
 psycopg2==2.5.1
+pycrypto==2.6
 pylibmc==1.2.3
 six==1.3.0
 trueskill==0.4.1
