--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-appconf==0.6
 django-compressor==1.3
 django-debug-toolbar==0.9.4
 django-extensions==1.1.1
+django-picklefield==0.3.0
 django-suit==0.2.2
 gunicorn==0.17.4
 paramiko==1.10.1
