Removed http auth

--- a/deploy/nginx/prod.conf
+++ b/deploy/nginx/prod.conf
@@ -5,12 +5,12 @@ server {
   charset utf-8;
 
   # Limit to local access
-  #allow 10.100.200.0/24;
-  #deny all;
+  # allow 10.100.200.0/24;
+  # deny all;
 
   # Password protect
-  auth_basic "Restricted";
-  auth_basic_user_file auth.conf;
+  # auth_basic "Restricted";
+  # auth_basic_user_file auth.conf;
 
   # Logs
   access_log off;
